<resources>
    <string name="app_name">PS-Nutr.io (Android Client)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nutri.io user</string>
    <string name="nav_header_subtitle">nutri.io-user@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="home_second">Home Second</string>
    <string name="category_name">category_name</string>
    <string name="tab_restaurants">Search for restaurants</string>
    <string name="tab_cuisines">Search for cuisines</string>
    <string name="section_name">Section_name</string>
    <string name="restaurants">Restaurants</string>
    <string name="map_view">Map view</string>
    <string name="by_name">By name</string>
    <string name="nearby">Nearby</string>
    <string name="meals">Meals</string>
    <string name="cuisines">Cuisines</string>
    <string name="no_result_found">No results found</string>
    <string name="error_network">Couldn\'t get results</string>
    <string name="no_more_results_found">Couldn\'t fetch more items</string>
    <string name="item_name">Item Name</string>
    <string name="item_cuisines">Cuisines</string>
    <string name="tab_meals">Search for meals</string>
    <string name="saved">Saved</string>
    <string name="insulin_values">Insulin</string>
    <string name="calculator">Calculator</string>
    <string name="calculator_home">Insulin calculator</string>
    <string name="history">History</string>
    <string name="meal_example">Hamburguer</string>
    <string name="meal_detail_info">info</string>
    <string name="add_meal_to_calc">Add to insulin calculator</string>
    <string name="quantity_to_submit">Quantity:</string>
    <string name="vote_this_restaurant">Vote this restaurant</string>
    <string name="vote_this_meal">Vote this meal</string>
    <string name="submit_a_meal_to_this_menu">Submit a meal to this menu</string>
    <string name="menu">Menu</string>
    <string name="downvote">Downvote</string>
    <string name="upvote">Upvote</string>
    <string name="no_internet_connection">Please connect your device to the internet</string>
    <string name="hint_cuisine_search">Search for a specific cuisine</string>
    <string name="hint_meal_search">Search for a specific meal</string>
    <string name="hint_restaurant_search">Search for a specific restaurant</string>
    <string name="link_pedro">https://github.com/Pedrokase</string>
    <string name="link_david">https://github.com/davidalb97</string>
    <string name="link_miguel">https://github.com/mig07</string>
    <string name="insulin_calculator">Insulin Calculator</string>
    <string name="insulin_type">Insulin type</string>
    <string name="add_a_meal_to_this_calculation">Add a meal to this calculation</string>
    <string name="pre_meal_blood_glucose_target">Pre-meal blood glucose target</string>
    <string name="insulin_calculator_nav">Insulin calculator</string>
    <string name="access_token">pk.eyJ1IjoibWlnMDciLCJhIjoiY2thNm96MWQzMDh6cTJybzMybnVjMjZ4dCJ9.VEnqYHRE7wBwhTp7-ASOBQ</string>
    <string name="create_your_routine">Create your routine</string>
    <string name="touch_to_create_your_routine_profiles">Touch to create your routine profiles</string>
    <string name="start_time">Starts at: %1$s</string>
    <string name="start_time_calc">Starts at:</string>
    <string name="end_time">Ends at: %1$s</string>
    <string name="end_time_calc">Ends at:</string>
    <string name="profile_name">Profile name</string>
    <string name="carbohydrate_ratio">Carbohydrate ratio: %1$s %2$s/ %3$s</string>
    <string name="carbohydrate_ratio_calc">Carbohydrate ratio:</string>
    <string name="recent_activity">Recent activity</string>
    <string name="routine_graph">Routine graph</string>
    <string name="add_insulin_profile_nav">Add an insulin profile</string>
    <string name="add_a_profile_dialog">Add a profile</string>
    <string name="cancel_add_profile_dialog">Cancel</string>
    <string name="confirm_add_profile_dialog">OK</string>
    <string name="add_profile_name_hint">Profile name</string>
    <string name="profile_name_label">Profile name</string>
    <string name="define_the_profile_time_period">Define the profile time period</string>
    <string name="glucose_objective">Your glucose objective</string>
    <string name="define_your_carbohydrate_ratio_value">Define your carbohydrate ratio value</string>
    <string name="how_much_glucose_is_reduced_by_an_unit_of_insulin">How much glucose is reduced by 1 insulin dose?</string>
    <string name="glucose_object_hint">Glucose objective</string>
    <string name="glucose_amount_hint">Glucose amount</string>
    <string name="how_many_carbohydrates_are_lowered_by_1_insulin_dose">How many carbohydrates are lowered by 1 insulin dose?</string>
    <string name="carbohydrate_amount">Carbohydrate amount</string>
    <string name="create_button">Create</string>
    <string name="you_don_t_have_a_routine_right_now">You don\'t have a routine right now</string>
    <string name="glucose_objective_card">Glucose objective: %1$s %2$s</string>
    <string name="glucose_objective_calc">Glucose objective:</string>
    <string name="insulin_sensitivity_factor">Insulin sensitivity factor: %1$s %2$s / %3$s</string>
    <string name="insulin_sensitivity_factor_calc">Insulin sensitivity factor:</string>
    <string name="insulin_unit">insulin unit</string>
    <string name="DialogAlert_deleteWarning">Warning</string>
    <string name="AlertDialog_deleteQuestion">Do you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="DialogAlert_deleted">Item deleted</string>
    <string name="you_don_t_have_any_submissions_right_now">You don\'t have any submissions right now</string>
    <string name="Fill_in_all_the_available_fields">Fill in all the available fields</string>
    <string name="This_time_period_is_already_occupied">This time period is already occupied</string>
    <string name="add_a_meal">Add a meal</string>
    <string name="current_blood_glucose">Current blood glucose</string>
    <string name="calculate">Calculate</string>
    <string name="you_don_t_have_any_saved_meals_at_the_moment">You don\'t have any saved meals at the moment</string>
    <string name="meal_name">Name</string>
    <string name="custom_meal_unit">Unit</string>
    <string name="glucose_amount_card">Glucose amount:</string>
    <string name="meal_carbohydrates_amount">Carbohydrates amount</string>
    <string name="meal_glucose_amount">Meal glucose amount</string>
    <string name="custom_meal_additional_quantity">Additional quantity: %1$.2f</string>
    <string name="ingredient_carbohydrates_amount">Ingredient carbohydrates: %1$.2f %2$s</string>
    <string name="ingredient_weight">Ingredient quantity: %1$.2f %2$s</string>
    <string name="add_the_meal_name">Pizza</string>
    <string name="add_restaurant">Restaurant</string>
    <string name="add_ingredients">Add ingredients</string>
    <string name="portion_quantity">Portion quantity</string>
    <string name="meal_quantity_card">Meal quantity: %1$.2f %2$s</string>
    <string name="carbohydrates_amount_card">Carbohydrates: %1$.2f gr</string>
    <string name="tab_your_meals">Your meals</string>
    <string name="custom_meal_image_url_txt">Image url</string>
    <string name="custom_meal_url_txt_hint">www.example.com</string>
    <string name="user_location_permission_explanation">You need to turn on your device location</string>
    <string name="no_meals_found">No meals found</string>
    <string name="no_restaurants_found">No restaurants found</string>
    <string name="you_don_t_have_any_favorite_meals">You don\'t have any favorite meals</string>
    <string name="you_don_t_have_any_saved_meals">You don\'t have any saved meals</string>
    <string name="you_don_t_have_any_meal_ingredients">This meal doesn\'t have any ingredients</string>
    <string name="show_ingredients">Ingredients</string>
    <string name="meal_info_add_ingredient">Add</string>
    <string name="meal_suggested">(suggested)</string>
    <string name="user_id">User ID</string>
    <string name="email_sign_activity">Email</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="username_sign_activity">Username (register only)</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="delete_account">Delete account</string>
    <string name="login_success">Successfully logged in</string>
    <string name="login_error">Could not login</string>
    <string name="register_success">Successfully registered</string>
    <string name="register_error">Could not register</string>
    <string name="sign_up">Register an account</string>
    <string name="tab_meal_detail">Meal info</string>
    <string name="your_current_profile_for_this_time">Your current profile for this time</string>
    <string name="you_do_not_have_any_insulin_profile_please_create_one">You do not have any insulin profile, please create one to use the calculator</string>
    <string name="no_value">-</string>
    <string name="light_mode_on">Light mode is on</string>
    <string name="dark_mode_on">Dark mode is on</string>
    <string name="dark_mode">Dark mode</string>
    <string name="results_title_dialog">Results</string>
    <string name="setup_a_profile_before_proceed">Please setup a profile before proceed</string>
    <string name="logout">Logout</string>
    <string name="logout_success">Successfully logged out</string>
    <string name="remove_account_success">Successfully removed account</string>
    <string name="remove_account_error">Could not remove account</string>
    <string-array name="glucose_units">
        <item>mg / dL</item>
        <item>mmol / L</item>
    </string-array>
    <string-array name="weight_units">
        <item>gr</item>
        <item>oz</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nutr_io">Nutr.io</string>
    <string name="skip">Skip</string>
    <string name="already_logged_in_message">You are already logged in with the user %1$s</string>
    <string name="loading">Loading …</string>
    <string name="invalid_auth_credentials">The credentials are no longer valid, please login again</string>
    <string name="turn_on_geolocation">Please turn on your geolocation</string>
    <string name="setup_profile_before_proceed">Please setup a profile before proceed</string>
    <string name="calculator_login_warning">You need to be login to use the calculator</string>
    <string name="profiles_error">Error obtaining profiles</string>
    <string name="user_location_permission_denied">Location permission not granted</string>
    <string name="about_us_title">The team that developed this project</string>
    <string name="about_us_footer">This project was made in the context of our bachelor\'s final project</string>
    <string name="resource_downvoted">Downvoted!</string>
    <string name="resource_upvoted">Upvoted!</string>
</resources>