<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/meal_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:text="@string/meal_name"
                android:textColor="?attr/textColor"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                >
            </TextView>

            <EditText
                android:id="@+id/restaurant_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:padding="5dp"
                android:background="@drawable/textbox_shape"
                android:hint="@string/add_restaurant"
                android:importantForAutofill="no"
                android:inputType="text"
                android:focusable="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_toRightOf="@+id/meal_name_label"
                />
        </RelativeLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/cuisines"
            android:textColor="?attr/textColor"
            android:textSize="24sp"
            android:layout_gravity="center">
        </TextView>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/restaurant_cuisines_spinner"
            android:textSize="30sp"
            android:inputType="text"
            android:singleLine="true"
            android:imeActionLabel="Done"
            android:imeOptions="actionDone"
            android:focusable="true"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/restaurant_cuisines_list"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/create_custom_meal_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:text="@string/create_button">
        </Button>
    </LinearLayout>
</ScrollView>